--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,11 @@
 ---
-layout: default
+layout: archive
 ---
 
-<h1>{{page.title}}</h1>
 <hr>
+<img src="{{ page.preview }}" alt="{{ page.title }} preview">
+{% for tag in page.tags %}
+<div class="project-tag">{{ tag }}</div>
+{% endfor %}
+
 {{ content }}
