Modify padding left/right to make website wider, add some css for projects

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: archive
 ---
 
 <hr>
-<img src="{{ page.preview }}" alt="{{ page.title }} preview">
+<img class="project-preview" src="{{ page.preview }}" alt="{{ page.title }} preview">
 {% for tag in page.tags %}
 <div class="project-tag">{{ tag }}</div>
 {% endfor %}
