--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -8,13 +8,13 @@
 
   @include breakpoint($large) {
     float: right;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-right: $right-sidebar-width-narrow;
+    width: calc(100% - #{$right-sidebar-width-narrow} - #{$sidebar-margin-left} - #{$sidebar-margin-right});
+		padding-right: #{$sidebar-margin-left};
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-right: $right-sidebar-width;
+    width: calc(100% - #{$right-sidebar-width} - #{$sidebar-margin-left} - #{$sidebar-margin-right});
+		padding-right: #{$sidebar-margin-left};
   }
 }
 
