--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -173,6 +173,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+	margin-left: $sidebar-margin-left;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
