--- a/_sass/minimal-mistakes/skins/_juicy.scss
+++ b/_sass/minimal-mistakes/skins/_juicy.scss
@@ -6,7 +6,7 @@
 $background-color: #222222 !default;
 $text-color: #ffffff !default;
 $primary-color: #ff4e50 !default;
-$border-color: mix(#fff, $background-color, 20%) !default;
+$border-color: mix(#ff4e50, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
