--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -142,7 +142,7 @@ $base0f: #ff5370 !default;
 
 /* projects */
 $featured-color: #ffa3a9 !default;
-$project-background-color: #111111 !default;
+$project-background-color: #1d1d1d !default;
 $project-tag-color: #ce1836 !default;
 $project-tag-background-color: #222222 !default;
 
@@ -164,7 +164,7 @@ $max-width: none !default;
 $right-sidebar-width-narrow: 200px !default;
 $right-sidebar-width: 275px !default;
 $right-sidebar-width-wide: 400px !default;
-$sidebar-margin-left: 100px;
+$sidebar-margin-left: 50px;
 $sidebar-margin-right: 50px;
 
 /*
