--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -36,9 +36,10 @@
     &.sticky {
       overflow-y: auto;
       /* calculate height of nav list
-         viewport height - nav height - masthead x-padding - hardcoded height lol
+         viewport height - nav height - masthead x-padding
       */
-      min-height: calc(100vh - #{$nav-height} - 2em - 153.25px);
+      min-height: calc(100vh - #{$nav-height} - 2em - 153.25px); /* hardcoded footer height */
+			max-height: calc(100vh - #{$nav-height} - 2em)
     }
   }
 
