--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -164,8 +164,8 @@ $max-width: none !default;
 $right-sidebar-width-narrow: 200px !default;
 $right-sidebar-width: 275px !default;
 $right-sidebar-width-wide: 400px !default;
-$sidebar-margin-left: 50px;
-$sidebar-margin-right: 50px;
+$sidebar-margin-left: 2em;
+$sidebar-margin-right: 2em;
 
 /*
    Other
