--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -6,6 +6,7 @@
 	display: grid;
 	grid-template-columns: 2fr 3fr;
 	width: 100%;
+	margin-bottom: 2rem;
 	background-color: $project-background-color;
 	transition: transform 250ms ease-in-out;
 }
@@ -14,14 +15,21 @@
 	transform: translateY(-0.5rem);
 }
 
-.project {
+.normal-projects {
 	display: grid;
-	width: 50%;
+	gap: 2rem;
+	grid-template-columns: 1fr 1fr;
+	width: 100%;
+}
+
+.normal-project {
+	display: grid;
+	grid-template-columns: 2fr 3fr;
 	background-color: $project-background-color;
 	transition: transform 250ms ease-in-out;
 }
 
-.project:hover {
+.normal-project:hover {
 	transform: translateY(-0.25rem);
 }
 
