--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -8,11 +8,13 @@
 	width: 100%;
 	margin-bottom: 2rem;
 	background-color: $project-background-color;
-	transition: transform 250ms ease-in-out;
+	transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
+	opacity: 0.75;
 }
 
 .featured-project:hover {
 	transform: translateY(-0.5rem);
+	opacity: 1;
 }
 
 .normal-projects {
@@ -26,11 +28,13 @@
 	display: grid;
 	grid-template-columns: 2fr 3fr;
 	background-color: $project-background-color;
-	transition: transform 250ms ease-in-out;
+	transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
+	opacity: 0.75;
 }
 
 .normal-project:hover {
 	transform: translateY(-0.25rem);
+	opacity: 1;
 }
 
 .featured {
@@ -44,7 +48,7 @@
 }
 
 .project-title {
-	color: $primary-color;
+	color: $project-title-color;
 	margin-top: 1rem;
 	margin-bottom: 0.25rem;
 }
@@ -67,4 +71,9 @@
 
 .project-preview {
 	display: inline-block;
+}
+
+.archive-project {
+	margin-right: auto;
+	max-width: 990px;
 }
