--- a/_sass/minimal-mistakes/skins/_juicy.scss
+++ b/_sass/minimal-mistakes/skins/_juicy.scss
@@ -3,24 +3,25 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #1d1d1d !default;
+$background-color: #111111 !default;
 $text-color: #ffffff !default;
 $primary-color: #ff4e50 !default;
-$border-color: mix(#ff4e50, $background-color, 20%) !default;
+$border-color: #ff4e50 !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
-$footer-background-color: mix($primary-color, #000, 10%) !default;
-$link-color: #ce1836 !default;
+$footer-background-color: #111111 !default;
+$link-color: #3bc7b8 !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
 $link-color-visited: mix(#000, $link-color, 25%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
-$featured-color: #ff4e50;
-$project-background-color: #222222;
-$project-tag-color: #ce1836;
-$project-tag-background-color: #222222;
+$featured-color: #ce1836 !default;
+$project-title-color: #ff4e50 !default;
+$project-background-color: #222222 !default;
+$project-tag-color: #c8e235 !default;
+$project-tag-background-color: #222222 !default;
 
 /* notices */
 $notice-background-mix: 90% !default;
@@ -47,21 +48,21 @@ $base0f: #cc6633 !default;
 .author__urls.social-icons i,
 .author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons i,
-.page__footer-follow .social-icons .svg-inline--fa  {
-  color: inherit;
+.page__footer-follow .social-icons .svg-inline--fa {
+	color: inherit;
 }
 
 /* next/previous buttons */
 .pagination--pager {
-  color: $text-color;
-  background-color: $primary-color;
-  border-color: transparent;
+	color: $text-color;
+	background-color: $primary-color;
+	border-color: transparent;
 
-  &:visited {
-    color: $text-color;
-  }
+	&:visited {
+		color: $text-color;
+	}
 }
 
 .ais-search-box .ais-search-box--input {
-  background-color: $form-background-color;
+	background-color: $form-background-color;
 }
