Change background colors

--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -144,6 +144,7 @@ $base0f: #ff5370 !default;
 $featured-color: #ce1836 !default;
 $project-title-color: #edb92e !default;
 $project-background-color: #1d1d1d !default;
+$project-border-color: #edb92e;
 $project-tag-color: #c8e235 !default;
 $project-tag-background-color: #222222 !default;
 
