--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,6 +4,7 @@ author_profile: true
 ---
 
 <div class="archive-project">
+	<h1>{{ page.title }}</h1>
 	<hr>
 	<img class="project-preview" src="{{ page.preview }}" alt="{{ page.title }} preview">
 
