--- a/_sass/minimal-mistakes/skins/_juicy.scss
+++ b/_sass/minimal-mistakes/skins/_juicy.scss
@@ -3,14 +3,14 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #111111 !default;
-$text-color: #ffffff !default;
+$background-color: #222222 !default;
+$text-color: #e3e2e0 !default;
 $primary-color: #ff4e50 !default;
 $border-color: #ff4e50 !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
-$footer-background-color: #111111 !default;
+$footer-background-color: $background-color !default;
 $link-color: #3bc7b8 !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
 $link-color-visited: mix(#000, $link-color, 25%) !default;
@@ -19,9 +19,10 @@ $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
 $featured-color: #ce1836 !default;
 $project-title-color: #ff4e50 !default;
-$project-background-color: #222222 !default;
+$project-background-color: #2a2a2a !default;
+$project-border-color: #edb92e;
 $project-tag-color: #c8e235 !default;
-$project-tag-background-color: #222222 !default;
+$project-tag-background-color: $project-background-color !default;
 
 /* notices */
 $notice-background-mix: 90% !default;
