Combine slime volleyball and write stuff about TD

--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -26,6 +26,7 @@
 
 .normal-project {
 	display: grid;
+	height: 100%;
 	grid-template-columns: 2fr 3fr;
 	background-color: $project-background-color;
 	transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
