--- a/_sass/minimal-mistakes/skins/_juicy.scss
+++ b/_sass/minimal-mistakes/skins/_juicy.scss
@@ -11,9 +11,9 @@ $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
 $footer-background-color: $background-color !default;
-$link-color: #3bc7b8 !default;
-$link-color-hover: mix(#fff, $link-color, 25%) !default;
-$link-color-visited: mix(#000, $link-color, 25%) !default;
+$link-color: #edb92e !default;
+$link-color-hover: mix(#fff, $link-color, 10%) !default;
+$link-color-visited: mix(#000, $link-color, 10%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#000, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#000, $background-color, 30%) !default;
