--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -26,8 +26,8 @@
 
 .normal-project {
 	display: grid;
-	height: 100%;
 	grid-template-columns: 2fr 3fr;
+	width: 100%;
 	background-color: $project-background-color;
 	transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
 	opacity: 0.75;
@@ -71,7 +71,9 @@
 }
 
 .project-preview {
-	display: inline-block;
+	margin-top: auto;
+	margin-bottom: auto;
+	padding-right: 2rem;
 }
 
 .archive-project {
