Add gifs for td and dodgeball2d

--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -73,7 +73,9 @@
 .project-preview {
 	margin-top: auto;
 	margin-bottom: auto;
+	padding-top: 2rem;
 	padding-right: 2rem;
+	padding-bottom: 2rem;
 }
 
 .archive-project {
