--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,7 +6,7 @@ author_profile: true
 <div class="archive-project">
 	<h1>{{ page.title }}</h1>
 	<hr>
-	<iframe src="{{ page.video }}" frameborder="0"></iframe>
+	<iframe src="{{ page.video }}" frameborder="0" allowfullscreen></iframe>
 
 	{% for tag in page.tags %}
 	<div class="project-tag">{{ tag }}</div>
