--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -70,6 +70,13 @@
 	color: $text-color;
 }
 
+.project-video {
+	position: relative;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+}
+
 .project-preview {
 	margin-top: auto;
 	margin-bottom: auto;
@@ -83,7 +90,12 @@
 	max-width: 990px;
 
 	iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
 		height: 100%;
+		border: 0;
 	}
 
 	a {
