Turn circles into squares for unordered lists

--- a/_sass/minimal-mistakes/_project.scss
+++ b/_sass/minimal-mistakes/_project.scss
@@ -101,4 +101,16 @@
 	a {
 		text-decoration: none;
 	}
+
+	ul {
+		li {
+			list-style-type: square;
+		}
+	}
+
+	ol {
+		li {
+			list-style-type: decimal;
+		}
+	}
 }
