Add og:image to header

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
+<meta name="image" property="og:image" content="https://github.com/JJamesWWang/JJamesWWang/blob/master/assets/images/teaser.png" />
+
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
